2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* include/asterisk/linkedlists.h (AST_LIST_HEAD_SET_NOLOCK): properly initialize tail pointer when list head is directly set (issue #5669)

	* app.c (ast_app_parse_options): ok, so we aren't all perfect... let's make the while loop actually work properly here (issue #5684)

	* apps/app_disa.c (disa_exec): correct password file parsing (issue #5676)

	* apps/app_meetme.c (conf_run): don't restrict admin users from joining a locked conference (issue #5680)

	* channels/chan_misdn.c: include stdio.h (issue #5671)
	* channels/chan_misdn_config.c: fix prototype warning (issue #5671)

	* pbx.c: remove apps that were deprecated before 1.0 was released (issue #5673)

	* apps/app_striplsd.c, apps/app_substring.c: remove apps that were deprecated before 1.0 was released (issue #5673)

	* include/asterisk/lock.h (PTHREAD_MUTEX_RECURSIVE_NP): work around header problems on Cygwin (issue #5668)

	* pbx/pbx_ael.c: handle switch default cases inside macros properly (issue #5354)

	* configs/voicemail.conf.sample (format): add strong warning about changing format list when mailboxes contain messages (issue #5689)

	* many files: ensure that system headers are included before Asterisk headers (issue #5693)

	* channels/chan_iax2.c (complete_iax2_show_peer): don't return from function without releasing lock (issue #5685)

	* channels/iax2-provision.c (iax_provision_reload): don't leak memory (issue #5700)

	* pbx/pbx_ael.c (handle_macro): don't leak memory (issue #5701)
	(handle_context): ditto

	* res/res_features.c (load_config): properly initialize referenced variable (issue #5703)

	* apps/app_queue.c (rqm_exec): correct segfault problem (issue #5705)
	(aqm_exec): ditto

	* app.c (ast_app_parse_options): don't increment 's' until after checking for NULL (related to issue #5630)

	* apps/app_rpt.c: solve a memory leak (config structure was not freed) (issue #5706

2005-11-10  Russell Bryant <russell@digium.com>
